patches/02_samba_installation/overlay/etc/iptables.up.rules
*nat
:PREROUTING ACCEPT [13:1124]
:POSTROUTING ACCEPT [279:22730]
:OUTPUT ACCEPT [279:22730]
COMMIT
*mangle
:PREROUTING ACCEPT [2156:1261503]
:INPUT ACCEPT [2143:1260379]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [2144:1119302]
:POSTROUTING ACCEPT [2144:1119302]
COMMIT
*filter
:FORWARD ACCEPT [0:0]
:INPUT DROP [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type echo-request -j ACCEPT
-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 12320 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 12321 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 12322 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 12323 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 139 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 445 -j ACCEPT
-A INPUT -p udp -m udp --dport 137 -j ACCEPT
-A INPUT -p udp -m udp --dport 138 -j ACCEPT
COMMIT
